
Les améliorations décrites sur cette page sont spécifiques aux fonctions BlueXP qui permettent la gestion de Cloud Volumes ONTAP. Pour découvrir les nouveautés du logiciel Cloud Volumes ONTAP lui-même, https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/index.html["Accédez aux notes de version de Cloud Volumes ONTAP"^]



== 5 mars 2024



=== Cloud Volumes ONTAP 9.14.1 GA

BlueXP peut désormais déployer et gérer la version Cloud Volumes ONTAP 9.14.1 General Availability dans AWS, Azure et Google Cloud.



== 2 février 2024



=== Prise en charge des machines virtuelles Edv5-series dans Azure

Cloud Volumes ONTAP prend désormais en charge les machines virtuelles de la série Edv5 suivantes à partir de la version 9.14.1.

* E4ds_v5
* E8ds_v5
* E20s_v5
* E32ds_v5
* E48ds_v5
* E64ds_v5


link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-configs-azure.html["Configurations prises en charge dans Azure"^]



== 16 janvier 2024



=== Versions de correctifs dans BlueXP

Les versions de correctifs sont disponibles dans BlueXP uniquement pour les trois dernières versions d'Cloud Volumes ONTAP.

link:https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-updating-ontap-cloud.html#patch-releases["Mettez à niveau Cloud Volumes ONTAP"^]



== 8 janvier 2024



=== Nouvelles machines virtuelles pour Azure dans plusieurs zones de disponibilité

À partir de Cloud Volumes ONTAP 9.13.1, plusieurs types de VM prennent en charge Azure plusieurs zones de disponibilité pour les déploiements de paires haute disponibilité, nouveaux et existants :

* L16s_v3
* L32s_v3
* L48s_v3
* L64s_v3


link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-configs-azure.html["Configurations prises en charge dans Azure"^]



== 6 décembre 2023



=== Cloud Volumes ONTAP 9.14.1 RC1

BlueXP peut désormais déployer et gérer Cloud Volumes ONTAP 9.14.1 dans AWS, Azure et Google Cloud.



=== Limite max. De volume FlexVol de 300 Tio
