@@ -5238,4 +5238,9 @@ Reportez-vous à la<block ref="9394861c48a8d6b1dd64975c2c0558db" category="inlin
   <block id="cf8f238c2116738b5ed3bacdbd527d14" category="section-title">Cloud Volumes ONTAP 9.14.1 GA</block>
   <block id="fc0f9e3eef3a6eff3efe2fe7cf358466" category="paragraph">BlueXP peut désormais déployer et gérer la version Cloud Volumes ONTAP 9.14.1 General Availability dans AWS, Azure et Google Cloud.</block>
   <block id="f8a262ce588acd29f7f91c585af357ea" category="list-text">9.14.1 GA</block>
+  <block id="4a1a05ee22994e328d9ec0402052b926" category="section-title">8 mars 2024</block>
+  <block id="1582ce9c3a0b0079717e0b0c6edf2347" category="section-title">Prise en charge d'Amazon Instant Metadata Service v2</block>
+  <block id="4ac5b49185bd4b8f8b0ef6b8869d149f" category="paragraph">Dans AWS, Cloud Volumes ONTAP, le médiateur et le connecteur prennent désormais en charge Amazon Instant Metadata Service v2 (IMDSv2) pour toutes les fonctions. IMDSv2 fournit une protection améliorée contre les vulnérabilités. Seul IMDSv1 était précédemment pris en charge.</block>
+  <block id="7fcd14ee7d62b2a6f712b7ed775cdbc3" category="inline-link-macro">Documentation d'installation et d'administration BlueXP pour la gestion des connecteurs existants</block>
+  <block id="6aec236f70c9d11e5073fa187bf36fd1" category="paragraph">Si vos stratégies de sécurité l'exigent, vous pouvez configurer vos instances EC2 pour qu'elles utilisent IMDSv2. Pour obtenir des instructions, reportez-vous à la section <block ref="437fb94a00c6c9b10a9ad9095b6680bc" category="inline-link-macro-rx"></block>.</block>
 </blocks>
